crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B032_B032.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B032 Possible unintentional type annotation (using `:`). Did you mean to assign (using `=`)?
 --> B032.py:9:1
  |
9 | dct["b"]: 2
  | ^^^^^^^^^^^
  |

B032 Possible unintentional type annotation (using `:`). Did you mean to assign (using `=`)?
  --> B032.py:10:1
   |
10 | dct.b: 2
   | ^^^^^^^^
   |

B032 Possible unintentional type annotation (using `:`). Did you mean to assign (using `=`)?
  --> B032.py:12:1
   |
12 | dct["b"]: "test"
   | ^^^^^^^^^^^^^^^^
   |

B032 Possible unintentional type annotation (using `:`). Did you mean to assign (using `=`)?
  --> B032.py:13:1
   |
13 | dct.b: "test"
   | ^^^^^^^^^^^^^
   |

B032 Possible unintentional type annotation (using `:`). Did you mean to assign (using `=`)?
  --> B032.py:16:1
   |
16 | dct["b"]: test
   | ^^^^^^^^^^^^^^
   |

B032 Possible unintentional type annotation (using `:`). Did you mean to assign (using `=`)?
  --> B032.py:17:1
   |
17 | dct["b"]: test.lower()
   | ^^^^^^^^^^^^^^^^^^^^^^
   |

B032 Possible unintentional type annotation (using `:`). Did you mean to assign (using `=`)?
  --> B032.py:18:1
   |
18 | dct.b: test
   | ^^^^^^^^^^^
   |

B032 Possible unintentional type annotation (using `:`). Did you mean to assign (using `=`)?
  --> B032.py:19:1
   |
19 | dct.b: test.lower()
   | ^^^^^^^^^^^^^^^^^^^
   |
