crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B034_B034.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B034 `re.sub` should pass `count` and `flags` as keyword arguments to avoid confusion due to unintuitive argument positions
 --> B034.py:5:1
  |
5 | re.sub("a", "b", "aaa", re.IGNORECASE)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

B034 `re.sub` should pass `count` and `flags` as keyword arguments to avoid confusion due to unintuitive argument positions
 --> B034.py:6:1
  |
6 | re.sub("a", "b", "aaa", 5)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

B034 `re.sub` should pass `count` and `flags` as keyword arguments to avoid confusion due to unintuitive argument positions
 --> B034.py:7:1
  |
7 | re.sub("a", "b", "aaa", 5, re.IGNORECASE)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

B034 `re.subn` should pass `count` and `flags` as keyword arguments to avoid confusion due to unintuitive argument positions
 --> B034.py:8:1
  |
8 | re.subn("a", "b", "aaa", re.IGNORECASE)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

B034 `re.subn` should pass `count` and `flags` as keyword arguments to avoid confusion due to unintuitive argument positions
 --> B034.py:9:1
  |
9 | re.subn("a", "b", "aaa", 5)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

B034 `re.subn` should pass `count` and `flags` as keyword arguments to avoid confusion due to unintuitive argument positions
  --> B034.py:10:1
   |
10 | re.subn("a", "b", "aaa", 5, re.IGNORECASE)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

B034 `re.split` should pass `maxsplit` and `flags` as keyword arguments to avoid confusion due to unintuitive argument positions
  --> B034.py:11:1
   |
11 | re.split(" ", "a a a a", re.I)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

B034 `re.split` should pass `maxsplit` and `flags` as keyword arguments to avoid confusion due to unintuitive argument positions
  --> B034.py:12:1
   |
12 | re.split(" ", "a a a a", 2)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

B034 `re.split` should pass `maxsplit` and `flags` as keyword arguments to avoid confusion due to unintuitive argument positions
  --> B034.py:13:1
   |
13 | re.split(" ", "a a a a", 2, re.I)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

B034 `re.sub` should pass `count` and `flags` as keyword arguments to avoid confusion due to unintuitive argument positions
  --> B034.py:14:1
   |
14 | sub("a", "b", "aaa", re.IGNORECASE)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
