crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B036_B036.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B036 `yield` in context manager without `try`/`finally` is not protected against exceptions
  --> B036.py:11:5
   |
 9 | def bad1():
10 |     print("start")
11 |     yield  # B036
   |     ^^^^^
12 |     print("cleanup")
   |

B036 `yield` in context manager without `try`/`finally` is not protected against exceptions
  --> B036.py:18:9
   |
16 | def bad_with_code_after_yield():
17 |     with other_cm():
18 |         yield  # B036
   |         ^^^^^
19 |         print("cleanup")
   |

B036 `yield` in context manager without `try`/`finally` is not protected against exceptions
  --> B036.py:25:9
   |
23 | def bad_nested_conditional_not_last():
24 |     if condition:
25 |         yield  # B036
   |         ^^^^^
26 |     print("after if")
   |

B036 `yield` in context manager without `try`/`finally` is not protected against exceptions
  --> B036.py:32:9
   |
30 | def bad_nested_in_loop_not_last():
31 |     for i in range(10):
32 |         yield  # B036
   |         ^^^^^
33 |     print("after loop")
   |
