crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B039_B039.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:21:26
   |
21 | ContextVar("cv", default=[])
   |                          ^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:22:26
   |
22 | ContextVar("cv", default={})
   |                          ^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:23:26
   |
23 | ContextVar("cv", default=list())
   |                          ^^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:24:26
   |
24 | ContextVar("cv", default=set())
   |                          ^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:25:26
   |
25 | ContextVar("cv", default=dict())
   |                          ^^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:26:26
   |
26 | ContextVar("cv", default=[char for char in "foo"])
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:27:26
   |
27 | ContextVar("cv", default={char for char in "foo"})
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:28:26
   |
28 | ContextVar("cv", default={char: idx for idx, char in enumerate("foo")})
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:29:26
   |
29 | ContextVar("cv", default=collections.deque())
   |                          ^^^^^^^^^^^^^^^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:30:26
   |
30 | ContextVar("cv", default=set[str]())
   |                          ^^^^^^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:31:36
   |
31 | ContextVar[set[str]]("cv", default=set[str]())
   |                                    ^^^^^^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:36:26
   |
36 | ContextVar("cv", default=bar())
   |                          ^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:37:26
   |
37 | ContextVar("cv", default=time.time())
   |                          ^^^^^^^^^^^
   |
help: Replace with `None`; initialize with `.set()``

B039 Do not use mutable data structures for `ContextVar` defaults
  --> B039.py:40:26
   |
40 | ContextVar("cv", default=baz())
   |                          ^^^^^
   |
help: Replace with `None`; initialize with `.set()``
