crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B905.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B905 [*] `zip()` without an explicit `strict=` parameter
 --> B905.py:4:1
  |
3 | # Errors
4 | zip("a", "b")
  | ^^^^^^^^^^^^^
5 | zip("a", "b", *zip("c"))
6 | zip(zip("a", "b"), strict=False)
  |
help: Add explicit value for parameter `strict=`
  |
4 | zip("a", "b", strict=False)
  |             ++++++++++++++
note: This is an unsafe fix and may change runtime behavior

B905 [*] `zip()` without an explicit `strict=` parameter
 --> B905.py:5:1
  |
3 | # Errors
4 | zip("a", "b")
5 | zip("a", "b", *zip("c"))
  | ^^^^^^^^^^^^^^^^^^^^^^^^
6 | zip(zip("a", "b"), strict=False)
7 | zip(zip("a", strict=True),"b")
  |
help: Add explicit value for parameter `strict=`
  |
5 | zip("a", "b", *zip("c"), strict=False)
  |                        ++++++++++++++
note: This is an unsafe fix and may change runtime behavior

B905 [*] `zip()` without an explicit `strict=` parameter
 --> B905.py:6:5
  |
4 | zip("a", "b")
5 | zip("a", "b", *zip("c"))
6 | zip(zip("a", "b"), strict=False)
  |     ^^^^^^^^^^^^^
7 | zip(zip("a", strict=True),"b")
  |
help: Add explicit value for parameter `strict=`
  |
6 | zip(zip("a", "b", strict=False), strict=False)
  |                 ++++++++++++++
note: This is an unsafe fix and may change runtime behavior

B905 [*] `zip()` without an explicit `strict=` parameter
 --> B905.py:7:1
  |
5 | zip("a", "b", *zip("c"))
6 | zip(zip("a", "b"), strict=False)
7 | zip(zip("a", strict=True),"b")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |
9 | # OK
  |
help: Add explicit value for parameter `strict=`
  |
7 | zip(zip("a", strict=True),"b", strict=False)
  |                              ++++++++++++++
note: This is an unsafe fix and may change runtime behavior

B905 [*] `zip()` without an explicit `strict=` parameter
  --> B905.py:22:1
   |
21 | # Errors (limited iterators).
22 | zip([1, 2, 3], repeat(1, 1))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
23 | zip([1, 2, 3], repeat(1, times=4))
   |
help: Add explicit value for parameter `strict=`
   |
22 | zip([1, 2, 3], repeat(1, 1), strict=False)
   |                            ++++++++++++++
note: This is an unsafe fix and may change runtime behavior

B905 [*] `zip()` without an explicit `strict=` parameter
  --> B905.py:23:1
   |
21 | # Errors (limited iterators).
22 | zip([1, 2, 3], repeat(1, 1))
23 | zip([1, 2, 3], repeat(1, times=4))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
24 |
25 | import builtins
   |
help: Add explicit value for parameter `strict=`
   |
23 | zip([1, 2, 3], repeat(1, times=4), strict=False)
   |                                  ++++++++++++++
note: This is an unsafe fix and may change runtime behavior

B905 [*] `zip()` without an explicit `strict=` parameter
  --> B905.py:34:1
   |
32 | zip(range(3))
33 | # Error
34 | zip(*lot_of_iterators)
   | ^^^^^^^^^^^^^^^^^^^^^^
help: Add explicit value for parameter `strict=`
   |
34 | zip(*lot_of_iterators, strict=False)
   |                      ++++++++++++++
note: This is an unsafe fix and may change runtime behavior
