crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B907_B907.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B907.py:8:10: B907 If value contains character '\'', output may be confusing. Consider removing surrounding quotes and adding !r
   |
 7 | # warnings
 8 | f"begin '{var}' end"
   |          ^^^^^ B907
 9 | f"'{var}' end"
10 | f"begin '{var}'"
   |

B907.py:9:4: B907 If value contains character '\'', output may be confusing. Consider removing surrounding quotes and adding !r
   |
 7 | # warnings
 8 | f"begin '{var}' end"
 9 | f"'{var}' end"
   |    ^^^^^ B907
10 | f"begin '{var}'"
   |

B907.py:10:10: B907 If value contains character '\'', output may be confusing. Consider removing surrounding quotes and adding !r
   |
 8 | f"begin '{var}' end"
 9 | f"'{var}' end"
10 | f"begin '{var}'"
   |          ^^^^^ B907
11 | 
12 | f'begin "{var}" end'
   |

B907.py:12:10: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
10 | f"begin '{var}'"
11 | 
12 | f'begin "{var}" end'
   |          ^^^^^ B907
13 | f'"{var}" end'
14 | f'begin "{var}"'
   |

B907.py:13:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
12 | f'begin "{var}" end'
13 | f'"{var}" end'
   |    ^^^^^ B907
14 | f'begin "{var}"'
   |

B907.py:14:10: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
12 | f'begin "{var}" end'
13 | f'"{var}" end'
14 | f'begin "{var}"'
   |          ^^^^^ B907
15 | 
16 | f'a "{"hello"}" b'
   |

B907.py:16:6: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
14 | f'begin "{var}"'
15 | 
16 | f'a "{"hello"}" b'
   |      ^^^^^^^^^ B907
17 | f'a "{foo()}" b'
   |

B907.py:17:6: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
16 | f'a "{"hello"}" b'
17 | f'a "{foo()}" b'
   |      ^^^^^^^ B907
18 | 
19 | # fmt: off
   |

B907.py:21:8: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
19 | # fmt: off
20 | k = (f'"'
21 |      f'{var}'
   |        ^^^^^ B907
22 |      f'"'
23 |      f'"')
   |

B907.py:26:8: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
25 | k = (f'"'
26 |      f'{var}'
   |        ^^^^^ B907
27 |      '"'
28 |      f'"')
   |

B907.py:31:8: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
30 | k = ('"'
31 |      f'{var}'
   |        ^^^^^ B907
32 |      '"')
   |

B907.py:37:8: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
35 |      f'{var}' # no warning
36 |      '"'
37 |      f'{var2}' # warning
   |        ^^^^^^ B907
38 |      '"')
   |

B907.py:41:8: B907 If value contains character '\'', output may be confusing. Consider removing surrounding quotes and adding !r
   |
40 | k = ('\''
41 |      f'{var}'
   |        ^^^^^ B907
42 |      "'")
   |

B907.py:45:8: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
44 | k = ('"'
45 |      f'{var}'
   |        ^^^^^ B907
46 |      "\"")
   |

B907.py:49:8: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
48 | k = (r'\"'
49 |      f'{var}'
   |        ^^^^^ B907
50 |      r'"')
51 | # fmt: on
   |

B907.py:53:13: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
51 | # fmt: on
52 | 
53 | f'{"hello"}"{var}"'  # warn for var and not hello
   |             ^^^^^ B907
54 | f'"{var}"{"hello"}'  # warn for var and not hello
55 | f'"{var}" and {"hello"} and "{var2}"'  # warn for var and var2
   |

B907.py:54:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
53 | f'{"hello"}"{var}"'  # warn for var and not hello
54 | f'"{var}"{"hello"}'  # warn for var and not hello
   |    ^^^^^ B907
55 | f'"{var}" and {"hello"} and "{var2}"'  # warn for var and var2
56 | f'"{var}" and "{var2}"'  # warn for both
   |

B907.py:55:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
53 | f'{"hello"}"{var}"'  # warn for var and not hello
54 | f'"{var}"{"hello"}'  # warn for var and not hello
55 | f'"{var}" and {"hello"} and "{var2}"'  # warn for var and var2
   |    ^^^^^ B907
56 | f'"{var}" and "{var2}"'  # warn for both
57 | f'"{var}""{var2}"'  # warn for both
   |

B907.py:55:30: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
53 | f'{"hello"}"{var}"'  # warn for var and not hello
54 | f'"{var}"{"hello"}'  # warn for var and not hello
55 | f'"{var}" and {"hello"} and "{var2}"'  # warn for var and var2
   |                              ^^^^^^ B907
56 | f'"{var}" and "{var2}"'  # warn for both
57 | f'"{var}""{var2}"'  # warn for both
   |

B907.py:56:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
54 | f'"{var}"{"hello"}'  # warn for var and not hello
55 | f'"{var}" and {"hello"} and "{var2}"'  # warn for var and var2
56 | f'"{var}" and "{var2}"'  # warn for both
   |    ^^^^^ B907
57 | f'"{var}""{var2}"'  # warn for both
   |

B907.py:56:16: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
54 | f'"{var}"{"hello"}'  # warn for var and not hello
55 | f'"{var}" and {"hello"} and "{var2}"'  # warn for var and var2
56 | f'"{var}" and "{var2}"'  # warn for both
   |                ^^^^^^ B907
57 | f'"{var}""{var2}"'  # warn for both
   |

B907.py:57:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
55 | f'"{var}" and {"hello"} and "{var2}"'  # warn for var and var2
56 | f'"{var}" and "{var2}"'  # warn for both
57 | f'"{var}""{var2}"'  # warn for both
   |    ^^^^^ B907
58 | 
59 | # check that pre-quote & variable is reset if no post-quote is found
   |

B907.py:57:11: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
55 | f'"{var}" and {"hello"} and "{var2}"'  # warn for var and var2
56 | f'"{var}" and "{var2}"'  # warn for both
57 | f'"{var}""{var2}"'  # warn for both
   |           ^^^^^^ B907
58 | 
59 | # check that pre-quote & variable is reset if no post-quote is found
   |

B907.py:60:14: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
59 | # check that pre-quote & variable is reset if no post-quote is found
60 | f'"{var}abc "{var2}"'  # warn on var2
   |              ^^^^^^ B907
61 | 
62 | # check for escaped quotes
   |

B907.py:63:5: B907 If value contains character '\'', output may be confusing. Consider removing surrounding quotes and adding !r
   |
62 | # check for escaped quotes
63 | f'\'{var}\''
   |     ^^^^^ B907
64 | f'\"{var}\"'
65 | f"\'{var}\'"
   |

B907.py:64:5: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
62 | # check for escaped quotes
63 | f'\'{var}\''
64 | f'\"{var}\"'
   |     ^^^^^ B907
65 | f"\'{var}\'"
66 | f"\"{var}\""
   |

B907.py:65:5: B907 If value contains character '\'', output may be confusing. Consider removing surrounding quotes and adding !r
   |
63 | f'\'{var}\''
64 | f'\"{var}\"'
65 | f"\'{var}\'"
   |     ^^^^^ B907
66 | f"\"{var}\""
   |

B907.py:66:5: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
64 | f'\"{var}\"'
65 | f"\'{var}\'"
66 | f"\"{var}\""
   |     ^^^^^ B907
67 | 
68 | # check formatting on different contained types
   |

B907.py:69:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
68 | # check formatting on different contained types
69 | f'"{var}"'
   |    ^^^^^ B907
70 | f'"{var.__str__}"'
71 | f'"{var.__str__.__repr__}"'
   |

B907.py:70:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
68 | # check formatting on different contained types
69 | f'"{var}"'
70 | f'"{var.__str__}"'
   |    ^^^^^^^^^^^^^ B907
71 | f'"{var.__str__.__repr__}"'
72 | f'"{3+5}"'
   |

B907.py:71:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
69 | f'"{var}"'
70 | f'"{var.__str__}"'
71 | f'"{var.__str__.__repr__}"'
   |    ^^^^^^^^^^^^^^^^^^^^^^ B907
72 | f'"{3+5}"'
73 | f'"{foo()}"'
   |

B907.py:72:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
70 | f'"{var.__str__}"'
71 | f'"{var.__str__.__repr__}"'
72 | f'"{3+5}"'
   |    ^^^^^ B907
73 | f'"{foo()}"'
74 | f'"{None}"'
   |

B907.py:73:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
71 | f'"{var.__str__.__repr__}"'
72 | f'"{3+5}"'
73 | f'"{foo()}"'
   |    ^^^^^^^ B907
74 | f'"{None}"'
75 | f'"{...}"'  # although f'"{...!r}"' == 'Ellipsis'
   |

B907.py:74:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
72 | f'"{3+5}"'
73 | f'"{foo()}"'
74 | f'"{None}"'
   |    ^^^^^^ B907
75 | f'"{...}"'  # although f'"{...!r}"' == 'Ellipsis'
76 | f'"{True}"'
   |

B907.py:75:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
73 | f'"{foo()}"'
74 | f'"{None}"'
75 | f'"{...}"'  # although f'"{...!r}"' == 'Ellipsis'
   |    ^^^^^ B907
76 | f'"{True}"'
   |

B907.py:76:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
74 | f'"{None}"'
75 | f'"{...}"'  # although f'"{...!r}"' == 'Ellipsis'
76 | f'"{True}"'
   |    ^^^^^^ B907
77 | 
78 | # alignment specifier
   |

B907.py:79:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
78 | # alignment specifier
79 | f'"{var:<}"'
   |    ^^^^^^^ B907
80 | f'"{var:>}"'
81 | f'"{var:^}"'
   |

B907.py:80:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
78 | # alignment specifier
79 | f'"{var:<}"'
80 | f'"{var:>}"'
   |    ^^^^^^^ B907
81 | f'"{var:^}"'
82 | f'"{var:5<}"'
   |

B907.py:81:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
79 | f'"{var:<}"'
80 | f'"{var:>}"'
81 | f'"{var:^}"'
   |    ^^^^^^^ B907
82 | f'"{var:5<}"'
   |

B907.py:82:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
80 | f'"{var:>}"'
81 | f'"{var:^}"'
82 | f'"{var:5<}"'
   |    ^^^^^^^^ B907
83 | 
84 | # explicit string specifier
   |

B907.py:85:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
84 | # explicit string specifier
85 | f'"{var:s}"'
   |    ^^^^^^^ B907
86 | 
87 | # empty format string
   |

B907.py:88:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
87 | # empty format string
88 | f'"{var:}"'
   |    ^^^^^^ B907
89 | 
90 | # These all currently give warnings, but could be considered false alarms
   |

B907.py:92:6: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
90 | # These all currently give warnings, but could be considered false alarms
91 | # multiple quote marks
92 | f'"""{var}"""'
   |      ^^^^^ B907
93 | # str conversion specified
94 | f'"{var!s}"'
   |

B907.py:94:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
92 | f'"""{var}"""'
93 | # str conversion specified
94 | f'"{var!s}"'
   |    ^^^^^^^ B907
95 | # two variables fighting over the same quote mark
96 | f'"{var}"{var2}"'  # currently gives warning on the first one
   |

B907.py:96:4: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
94 | f'"{var!s}"'
95 | # two variables fighting over the same quote mark
96 | f'"{var}"{var2}"'  # currently gives warning on the first one
   |    ^^^^^ B907
   |

B907.py:96:10: B907 If value contains character '\"', output may be confusing. Consider removing surrounding quotes and adding !r
   |
94 | f'"{var!s}"'
95 | # two variables fighting over the same quote mark
96 | f'"{var}"{var2}"'  # currently gives warning on the first one
   |          ^^^^^^ B907
   |
